src/app/components/landing/landing.component.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.landing-container {
  height: 100vh;
  background-color: #353535;
  padding-top: 100px;
  overflow: clip;
}

.landing-text-container {
  margin-left: 100px;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.wolfcycle-logo {
  z-index: 99999;
  width: min-content;
}

.wolfcycle-logo img {
  object-fit: cover;
  max-width: 25rem;
  z-index: 99999;
}

.wolf-img-container {
  position: relative;
}

.wolfcycle-wolf {
  position: relative;
  height: 1000px;
  top: -750px;
  left: 50%;
  z-index: 1;
}

.container {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  z-index: 9999;
  width: 90%;
  text-align: left;
}
.container p {
  font-size: 3rem;
  padding: 0.5rem 0 .5rem 0;
  font-weight: bold;
  letter-spacing: 0.1rem;
  // text-align: center;
  overflow: hidden;
  z-index: 9999;
}
.container p span.typed-text {
  font-weight: normal;
  font-family: 'Century-Bold';
  font-size: 4rem;
  color: #E7FF6D;
  z-index: 9999;
}
.container p span.cursor {
  display: inline-block;
  background-color: #ccc;
  font-size: 4rem;
  margin-left: 0.2rem;
  width: 3px;
  animation: blink 1s infinite;
  z-index: 9999;
}
.container p span.cursor.typing {
  animation: none;
  z-index: 9999;
}
@keyframes blink {
  0%  { background-color: #ccc; }
  49% { background-color: #ccc; }
  50% { background-color: transparent; }
  99% { background-color: transparent; }
  100%  { background-color: #ccc; }
}

.landing-btn {
  z-index: 999999999;
}

.landing-btn button {
  font-family: 'Century-Gothic';
  font-size: 1rem;
  color: white;
  border: 2px solid white;
  background-color: transparent;
  padding: 1rem 2.5rem;
  margin-top: 2rem;
  cursor: pointer;
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  transition: all 0.2s linear;
  z-index: 999999999;
}

.landing-btn button:hover {
  color: #E7FF6D;
  border: 2px solid #E7FF6D;
  background-color: #353535;
  transition: .2s;
}

.navigation-dots-container {
  position: fixed;
  top: 35%;
  right: 50px;
  display: flex;
  flex-direction: column;
  height: 100%;
  z-index: 999999999;
}

.dot {
  height:15px;
  width: 15px;
  border-radius: 15px;
  border: 2px solid #E7FF6D;
  margin-bottom: 3rem;
  cursor: pointer;
  z-index: 999999999;
}

.one {
  background-color: #E7FF6D;
}


@media only screen and (max-width: 1000px) {
  .container p span.typed-text {
    font-weight: normal;
    font-family: 'Century-Bold';
    font-size: 3.5rem;
    // color: red;

  }

  .container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    // width: 60%;
    // min-height: 140px;
  }

  .container p {
    font-size: 3rem;
    height: 100%;
    padding: 0rem 0 0rem 0;
    overflow: hidden;
  }
}

@media only screen and (max-width: 800px) {


  .landing-text-container {
    margin-left: 20px;
  }

  .navigation-dots-container {
    display: none;
  }

}

@media only screen and (max-width: 700px) {
  .container p span.typed-text {
    font-size: 3rem;
  }

  .container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
  }

.wolfcycle-logo img {
  max-width: 20rem;
}

.landing-btn  button{
  margin-top: 1rem;
}

.container {
  width: 100%;
}
}

@media only screen and (max-width: 500px) {
  .landing-container {
    height: 100vh;
    padding-top: 80px;
  }

  .wolfcycle-wolf {
    position: relative;
    height: 1000px;
    left: 30%;
    z-index: 1;
  }

  .landing-text-container {
    margin-left: 10px;
  }

  .wolfcycle-logo img {
    max-width: 18rem;
  }

  .container p {
    line-height: 45px;
  }

  .container p span.typed-text {
    font-size: 2.5rem;
  }

  .landing-btn button {
    padding: .8rem 1.5rem;
  }
}

